infra/k8s/frontend/overlays/stage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-httproute
  namespace: frontend
spec:
  parentRefs:
    - name: main-gateway
      namespace: kube-system
      sectionName: https-wildcard
  hostnames:
    - stage.codedang.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 5525
